--- a/PO/en/src_guiutils_pysidescintilla.po
+++ b/PO/en/src_guiutils_pysidescintilla.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 5.0.0\n"
-"POT-Creation-Date: 2022-12-14 09:52-0500\n"
+"POT-Creation-Date: 2024-06-20 07:18-0400\n"
 "PO-Revision-Date: 2013-07-15 14:45 EDT\n"
 "Last-Translator: Wingware <support@wingware.com>\n"
 "Language-Team: None\n"
@@ -248,97 +248,101 @@ msgid "Plain Text"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:276
-msgid "Forth"
+msgid "CSV"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:277
-msgid "Erlang"
+msgid "Forth"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:278
-msgid "Octave"
+msgid "Erlang"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:279
-msgid "Verilog"
+msgid "Octave"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:280
-msgid "Markdown"
+msgid "Verilog"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:281
-msgid "ASN1"
+msgid "Markdown"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:282
-msgid "VHDL"
+msgid "ASN1"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:283
-msgid "CAML"
+msgid "VHDL"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:284
-msgid "Haskell"
+msgid "CAML"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:285
-msgid "Smalltalk"
+msgid "Haskell"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:286
-msgid "Inno Setup"
+msgid "Smalltalk"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:287
-msgid "Spice"
+msgid "Inno Setup"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:288
-msgid "D Source"
+msgid "Spice"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:289
-msgid "Abaqus"
+msgid "D Source"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:290
-msgid "MySQL"
+msgid "Abaqus"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:291
-msgid "GNU GetText PO"
+msgid "MySQL"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:292
-msgid "Mako Template"
+msgid "GNU GetText PO"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:293
-msgid "Django Template"
+msgid "Mako Template"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:294
-msgid "R Source"
+msgid "Django Template"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:295
-msgid "Latex List of Figures"
+msgid "R Source"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:296
-msgid "MetaPost"
+msgid "Latex List of Figures"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:297
-msgid "Coffee Script"
+msgid "MetaPost"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:298
-msgid "CMake"
+msgid "Coffee Script"
 msgstr ""
 
 #: src/guiutils/pysidescintilla/sci_utils.py:299
+msgid "CMake"
+msgstr ""
+
+#: src/guiutils/pysidescintilla/sci_utils.py:300
 msgid "JSON"
 msgstr ""
